Testing index file

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>This is the title</title>
 </head>
 <body>
-
+This is the body
+IS 117
+A03
 </body>
 </html>
